--- a/css/_color.scss
+++ b/css/_color.scss
@@ -1,15 +1,3 @@
-.btn-primary {
-    background-color: #e6007e;
-    border-radius: 0px;
-    border: none;
-    width: 50%;
-    &:hover{
-        background-color: lighten(#e6007e, 10%);
-    } 
-}
-.border-info {
-    border-color: #304b60 !important;
-}
 h3 {
     color: #2a697b;
     font-family: 'Open Sans', sans-serif;
@@ -21,4 +9,9 @@ p {
 .text-center {
     color: #f1f3f5;
     font-family: 'Open Sans', sans-serif;
+}
+.text-danger {
+    color: #e6007e !important;
+    font-weight: light;
+    font-size: 10px;
 }
