--- a/css/_form.scss
+++ b/css/_form.scss
@@ -1,34 +1,68 @@
-.form-control{
+.form-control {
     border: none;
     transition: none;
     padding: 0;
 }
+textarea:focus,
+input[type="text"]:focus,
+input[type="email"]:focus,
+input[type="tel"]:focus, {
+  border-color:none;
+  outline: 0;
+  /* IE6-9 */
+
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+}
+
 ::placeholder {
     font-weight: 400;
     font-size: 10px;
     margin: 0;
 }
+
 .container input#form-check {
-  position: absolute;
-  top: 15px;
-  height: 30px;
-  width: 30px;
-  outline: black 1px solid;
-    -moz-appearance:none;
--webkit-appearance:none;
--o-appearance:none;
+    margin-top: 15px;
+    margin-left: 0;
+    height: 30px;
+    width: 30px;
+    outline: black 1px solid;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    -o-appearance: none;
+    &:hover {
+        background-color: #e6007e;
+    }
     &:checked {
         background-color: #e6007e;
     }
 }
-
-
 .form-check-label {
-    margin: 13px 15px 0 18px; 
-    font-size: 14px;
+    margin: 10px 25px 10px 35px;
+    font-size: 12px;
 }
-.checkmark:checked {
-    height: 30px;
-    width: 30px;
-    color: pink;
+.btn-primary {
+    background-color: #e6007e;
+    border-radius: 0px;
+    border: none;
+    width: 50%;
+    &:hover{
+        background-color: lighten(#e6007e, 10%);
+    } 
+}
+.border-info {
+    border-color: #313131!important;
+}
+
+/* Style the buttons */
+.form-control {
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+/* Style the active class (and buttons on mouse-over) */
+.active, .form-control:hover {
+   border-bottom: 1px solid #e6007e !important;
 }
