--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,3 @@
-.btn-primary {
-  background-color: #e6007e;
-  border-radius: 0px;
-  border: none;
-  width: 50%; }
-  .btn-primary:hover {
-    background-color: #ff1a97; }
-
-.border-info {
-  border-color: #304b60 !important; }
-
 h3 {
   color: #2a697b;
   font-family: 'Open Sans', sans-serif; }
@@ -21,12 +10,28 @@ p {
   color: #f1f3f5;
   font-family: 'Open Sans', sans-serif; }
 
+.text-danger {
+  color: #e6007e !important;
+  font-weight: light;
+  font-size: 10px; }
+
 .form-control {
   border: none;
   -webkit-transition: none;
   -o-transition: none;
   transition: none;
   padding: 0; }
+
+textarea:focus,
+input[type="text"]:focus,
+input[type="email"]:focus,
+input[type="tel"]:focus {
+  border-color: none;
+  outline: 0;
+  /* IE6-9 */
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none; }
 
 ::-webkit-input-placeholder {
   font-weight: 400;
@@ -49,29 +54,50 @@ p {
   margin: 0; }
 
 .container input#form-check {
-  position: absolute;
-  top: 15px;
+  margin-top: 15px;
+  margin-left: 0;
   height: 30px;
   width: 30px;
   outline: black 1px solid;
   -moz-appearance: none;
   -webkit-appearance: none;
   -o-appearance: none; }
+  .container input#form-check:hover {
+    background-color: #e6007e; }
   .container input#form-check:checked {
     background-color: #e6007e; }
 
 .form-check-label {
-  margin: 13px 15px 0 18px;
-  font-size: 14px; }
+  margin: 10px 25px 10px 35px;
+  font-size: 12px; }
 
-.checkmark:checked {
-  height: 30px;
-  width: 30px;
-  color: pink; }
+.btn-primary {
+  background-color: #e6007e;
+  border-radius: 0px;
+  border: none;
+  width: 50%; }
+  .btn-primary:hover {
+    background-color: #ff1a97; }
+
+.border-info {
+  border-color: #313131 !important; }
+
+/* Style the buttons */
+.form-control {
+  border: none;
+  outline: none;
+  cursor: pointer; }
+
+/* Style the active class (and buttons on mouse-over) */
+.active, .form-control:hover {
+  border-bottom: 1px solid #e6007e !important; }
 
 .container {
   margin: 40px auto;
   position: relative; }
+
+.logo {
+  padding-top: 15px; }
 
 h3 {
   margin-top: 30px; }
@@ -103,6 +129,9 @@ h3 {
 .social {
   position: absolute;
   bottom: 0; }
+
+textarea:focus, input:focus {
+  outline: none; }
 
 @media only screen and (max-width: 768px) {
   h3 {
